--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
         <title>Calculator</title>
     </head>
     <body>
+        <div class="calc-container">
+            <div class="calc-window">
+
+            </div>
+            <div class="calc-buttons">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>0</button>
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+                <button>Clear</button>
+            </div>
+        </div>
+        
         <script src="app.js"></script>
     </body>
 </html>
