add basic math functions in js and 0 button for calculator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <button>-</button>
                 <button>*</button>
                 <button>/</button>
+                <button>=</button>
                 <button>Clear</button>
             </div>
         </div>
