--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
             </div>
             <div class="calc-buttons">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>0</button>
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
-                <button>=</button>
-                <button>Clear</button>
+                <button class="num 1">1</button>
+                <button class="num 2">2</button>
+                <button class="num 3">3</button>
+                <button class="num 4">4</button>
+                <button class="num 5">5</button>
+                <button class="num 6">6</button>
+                <button class="num 7">7</button>
+                <button class="num 8">8</button>
+                <button class="num 9">9</button>
+                <button class="num 0">0</button>
+                <button class="op">+</button>
+                <button class="op">-</button>
+                <button class="op">*</button>
+                <button class="op">/</button>
+                <button class="op">=</button>
+                <button class="clear">Clear</button>
             </div>
         </div>
         
