add styling for display and what to display from js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="calc-container">
             <div class="calc-window">
-
+                <p class="currentOperation"></p>
             </div>
             <div class="calc-buttons">
                 <button class="num 1">1</button>
